Next release
============

FIX
---

- fix to have python 3.6 compat

0.1 - 2020-01-13
================

NEW
---

- initial release
- cron_install can install a file in crontab, surrounded with markers