@@ -1,6 +1,11 @@
 Next release
 ============
 
+NEW
+---
+
+- added remove option
+
 FIX
 ---
 
